--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,11 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="//www.example.com/style.css">
+
+    <link rel="stylesheet" href="styles.css">
+    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+    <script src="script.js"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -26,6 +31,11 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <script type="text/javascript">
+    if(screen.width <= 800){
+    //  window.open('https://www.google.com','_self');
+    }
+    </script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
